Fix link spacing

--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -52,7 +52,7 @@ ul {
   margin: 0px;
   padding: 0px;
   display: flex;
-  gap: 8px;
+  gap: 16px;
 }
 
 .cluster {
